# zhc-C99

./: Base128_Linux  C99.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  TwoFilesXor.c  a.bat  a.out  b  b.c  chong.txt  chong.txt.Base64eO.txt  cmake_install.cmake  com_zhc_u_demo_JNI_a.h  com_zhc_u_demo_JNI_b.h  demo0  demo0.c  demo1.c  demo2.c  demo4.c  demo5.c  getFileSize  getFileSize.c  main.c  s_a.h  snake.c  test.c  test.s  test10.c  test6.c  test7.c  test8.c  test9.c  zhc.c  zhc.h
s/: a.out  alloc.c  h1.c  h1.h  h2.c  h2.h  s0.c  unicode.c  unicode.txt
u/: Base128.c  Base128.c___jb_tmp___.txt  Base128.docx  Base128.s  Base128Lib.c  Base128Lib.h  Base128_old.c  Base64.c  Base64.s  Base64Lib.c  Base64Lib.h  BigDecimal.c  BigDecimal.h  FileXor.c  FileXor.s  TEA.c  TEA.s  a.h  cat_file.c  cmpDate.c  cmpDate.h  encode.c  kwm.c  kwm.h  kwm.s  qmc.c  qmc.s  qmcLib.c  qmcLib.h  sort.c  sort.h  splitFile.c  strdic.c  strdic.h  zhc.h
u/aes_128/: .travis.yml  aes.c  main.c
